add presentation pdf

--- a/01B_Data_Cleaning_Twitter.ipynb
+++ b/01B_Data_Cleaning_Twitter.ipynb
@@ -311,8 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt_tweets['sentiment'] = np.where(dt_tweets['compound']<0, 1, 0)\n",
-    "        "
+    "dt_tweets['sentiment'] = np.where(dt_tweets['compound']<0, 1, 0)"
    ]
   },
   {
